@@ -1,6 +1,7 @@
 // 1999-10-11 bkoz
 
-// Copyright (C) 1999, 2000, 2001, 2002, 2003 Free Software Foundation, Inc.
+// Copyright (C) 1999, 2000, 2001, 2002, 2003, 2005
+// Free Software Foundation, Inc.
 //
 // This file is part of the GNU ISO C++ Library.  This library is free
 // software; you can redistribute it and/or modify it under the
@@ -94,10 +95,8 @@ void test02()
 
   bool test __attribute__((unused)) = true;
 
-  const char* lit00 = "chicago underground trio/possible cube on delmark";
-  size_t i01 = traits_type::length(lit00);
-  char lit01[i01];
-  strcpy(lit01, lit00);
+  char lit01[] = "chicago underground trio/possible cube on delmark";
+  size_t i01 = traits_type::length(lit01);
 
   testbuf buf01;
 
